--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ei<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -863,11 +863,9 @@ ei<!DOCTYPE html>
 
               </a>
             </li>
-
           </ul>
-
         </section>
-
+            
       </article>
       
       <!--
