--- a/index.html
+++ b/index.html
@@ -490,6 +490,25 @@
         </header>
 
         <section class="projects">
+          <ul class="filter-list">
+
+            <li class="filter-item">
+              <button class="active" data-filter-btn>All</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>ECUST</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>THL</button>
+            </li>
+
+            <li class="filter-item">
+              <button data-filter-btn>UoM</button>
+            </li>
+
+          </ul>
            <div class="filter-select-box">
 
             <button class="filter-select" data-select>
@@ -509,15 +528,15 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web design</button>
+                <button data-select-item>ECUST</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Applications</button>
+                <button data-select-item>THL</button>
               </li>
 
               <li class="select-item">
-                <button data-select-item>Web development</button>
+                <button data-select-item>UoM</button>
               </li>
 
             </ul>
@@ -525,7 +544,7 @@
           </div>
           <ul class="project-list">
 
-            <li class="project-item  active" data-filter-item data-category="web development">
+            <li class="project-item  active" data-filter-item data-category="THL">
               <a href="#">
 
                 <figure class="project-img">
@@ -536,9 +555,9 @@
                   <img src="./assets/images/example.gif" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">Robotic Arm</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">THL</p>
 
               </a>
             </li>
