--- a/index.html
+++ b/index.html
@@ -509,6 +509,7 @@
             </li>
 
           </ul>
+          <!--
            <div class="filter-select-box">
 
             <button class="filter-select" data-select>
@@ -542,6 +543,7 @@
             </ul>
 
           </div>
+          -->
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="THL">
@@ -555,10 +557,8 @@
                   <img src="./assets/images/example.gif" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Robotic Arm</h3>
-
+                <h3 class="project-title" href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">Robotic Arm</h3>
                 <p class="project-category">THL</p>
-                <div class="mbr-section-btn"><a class="btn btn-md btn-white-outline display-4" href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md" target="_blank">More</a>
               </a>
             </li>
 
