--- a/index.html
+++ b/index.html
@@ -547,7 +547,7 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="THL">
-              <a href="#">
+              <a href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
