--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
               <a href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
 
                 <figure class="project-img">
-                  <div class="project-item-icon-box">
+                  <div class="project-item-icon-box" href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
