--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-design.svg
-                " alt="design icon" width="40">
+                <img src="./assets/images/python.jpg
+                " alt="python icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -239,7 +239,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-app.svg" alt="mobile app icon" width="40">
+                <img src="./assets/images/ML.jpg" alt="machine learning" width="40">
               </div>
 
               <div class="service-content-box">
@@ -255,7 +255,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-photo.svg" alt="camera icon" width="40">
+                <img src="./assets/images/machineArm.jpg" alt="robotic arm" width="40">
               </div>
 
               <div class="service-content-box">
