--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/icon-dev.svg" alt="Web development icon" width="40">
+                <img src="./assets/images/ros2.jpg" alt="Ros2 icon" width="40">
               </div>
 
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Terminal Control</h4>
+                <h4 class="h4 service-item-title">Ros2</h4>
 
                 <p class="service-item-text">
                   I learn to control robots with ROS2.
