--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="THL">
-              <a href="https://github.com/Jcheems/Jcheems.github.io/Thesis.md">
+              <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/Thesis.md">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
