--- a/index.html
+++ b/index.html
@@ -529,14 +529,14 @@
               <a href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
 
                 <figure class="project-img">
-                  <div class="project-item-icon-box" href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
+                  <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
                   <img src="./assets/images/example.gif" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title" href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">Robotic Arm</h3>
+                <h3 class="project-title">Robotic Arm</h3>
                 <p class="project-category">THL</p>
               </a>
             </li>
