--- a/index.html
+++ b/index.html
@@ -578,6 +578,22 @@
               </a>
             </li>
 
+            <li class="project-item  active" data-filter-item data-category="THL">
+              <a href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Astar.gif" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Robotic Arm</h3>
+                <p class="project-category">Manchester</p>
+              </a>
+            </li>
+            
           </ul>
 
         </section>
