--- a/index.html
+++ b/index.html
@@ -589,8 +589,8 @@
                   <img src="./assets/images/Astar.gif" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Robotic Arm</h3>
-                <p class="project-category">Manchester</p>
+                <h3 class="project-title">A* Algorithms</h3>
+                <p class="project-category">Uom</p>
               </a>
             </li>
             
