--- a/index.html
+++ b/index.html
@@ -578,8 +578,8 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="THL">
-              <a href="https://github.com/Jcheems/copy/blob/main/doc/Robotic%20Arm%20Project/Introduction.md">
+            <li class="project-item  active" data-filter-item data-category="Uom">
+              <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/Astar.md">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
