--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="logo-facebook"></ion-icon>
+              <ion-icon name="github-mark-white.svg"></ion-icon>
             </a>
           </li>
 
