--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
           <li class="social-item">
             <a href="#" class="social-link">
-              <ion-icon name="github-mark-white.svg"></ion-icon>
+              <ion-icon name="github-mark.png"></ion-icon>
             </a>
           </li>
 
@@ -590,6 +590,22 @@
                 </figure>
 
                 <h3 class="project-title">A* Algorithms</h3>
+                <p class="project-category">Uom</p>
+              </a>
+            </li>
+
+            <li class="project-item  active" data-filter-item data-category="Uom">
+              <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/leo.md">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Grasping.mp4" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Leo Robot</h3>
                 <p class="project-category">Uom</p>
               </a>
             </li>
