--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Grasping.gif" alt="finance" loading="lazy">
+                  <img src="./assets/images/grasping.gif" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Leo Robot</h3>
