--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="#" class="social-link">
-              <ion-icon name="github-mark.png"></ion-icon>
+            <a href="https://github.com/dashboard" class="social-link">
+              <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
 
