--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://github.com/dashboard" class="social-link">
+            <a href="https://github.com/Jcheems/jcheems.github.io" class="social-link">
               <ion-icon name="logo-github"></ion-icon>
             </a>
           </li>
