--- a/index.html
+++ b/index.html
@@ -603,6 +603,22 @@
                 <p class="project-category">Uom</p>
               </a>
             </li>
+
+            <li class="project-item  active" data-filter-item data-category="Uom">
+              <a href="https://github.com/Jcheems/fr3_control/blob/main/README.md">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="https://github.com/Jcheems/fr3_control/blob/main/fr3.gif" alt="finance" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">FR3</h3>
+                <p class="project-category">Uom</p>
+              </a>
+            </li>
             
           </ul>
 
