--- a/index.html
+++ b/index.html
@@ -612,7 +612,7 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="https://github.com/Jcheems/fr3_control/blob/main/fr3.gif" alt="finance" loading="lazy">
+                  <img src="./assets/images/fr3.gif" alt="finance" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">FR3</h3>
