--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@
             </a>
           </li>
 
+          <li class="social-item">
+            <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/CV.pdf" class="social-link">
+              <ion-icon name="logo-cv"></ion-icon>
+            </a>
+          </li>
+
         </ul>
 
       </div>
