--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
           <li class="social-item">
             <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/CV.pdf" class="social-link">
-              <ion-icon name="logo-cv"></ion-icon>
+              <ion-icon name="document-outline"></ion-icon>
             </a>
           </li>
 
