--- a/index.html
+++ b/index.html
@@ -498,11 +498,11 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>THL</button>
+              <button class="active" data-filter-btn>THL</button>
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>UoM</button>
+              <button class="active" data-filter-btn>UoM</button>
             </li>
 
           </ul>
