--- a/index.html
+++ b/index.html
@@ -571,7 +571,7 @@
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Uom">
+            <li class="project-item  active" data-filter-item data-category="UoM">
               <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/Astar.md">
 
                 <figure class="project-img">
@@ -583,11 +583,11 @@
                 </figure>
 
                 <h3 class="project-title">A* Algorithms</h3>
-                <p class="project-category">Uom</p>
+                <p class="project-category">UoM</p>
               </a>
             </li>
 
-             <li class="project-item  active" data-filter-item data-category="Uom">
+             <li class="project-item  active" data-filter-item data-category="UoM">
               <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/uav/uav.md">
 
                 <figure class="project-img">
@@ -599,12 +599,12 @@
                 </figure>
 
                 <h3 class="project-title">A* Algorithms</h3>
-                <p class="project-category">Uom</p>
+                <p class="project-category">UoM</p>
               </a>
             </li>
 
             
-            <li class="project-item  active" data-filter-item data-category="Uom">
+            <li class="project-item  active" data-filter-item data-category="UoM">
               <a href="https://github.com/Jcheems/jcheems.github.io/blob/master/leo.md">
 
                 <figure class="project-img">
@@ -616,11 +616,11 @@
                 </figure>
 
                 <h3 class="project-title">Leo Robot</h3>
-                <p class="project-category">Uom</p>
+                <p class="project-category">UoM</p>
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="Uom">
+            <li class="project-item  active" data-filter-item data-category="UoM">
               <a href="https://github.com/Jcheems/fr3_control/blob/main/README.md">
 
                 <figure class="project-img">
@@ -632,7 +632,7 @@
                 </figure>
 
                 <h3 class="project-title">FR3</h3>
-                <p class="project-category">Uom</p>
+                <p class="project-category">UoM</p>
               </a>
             </li>
             
