--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
 
             </button>
 
-            <ul class="select-list">
+<!--             <ul class="select-list">
 
               <li class="select-item">
                 <button data-select-item>All</button>
@@ -533,7 +533,7 @@
                 <button data-select-item>UoM</button>
               </li>
 
-            </ul>
+            </ul> -->
 
           </div>
           
