--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
           </ul>
           
-           <div class="filter-select-box">
+<!--            <div class="filter-select-box">
 
             <button class="filter-select" data-select>
 
@@ -517,7 +517,7 @@
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
 
-            </button>
+            </button> -->
 
 <!--             <ul class="select-list">
 
