--- a/index.html
+++ b/index.html
@@ -533,9 +533,9 @@
                 <button data-select-item>UoM</button>
               </li>
 
-            </ul> -->
+            </ul> 
 
-          </div>
+          </div> -->
           
           <ul class="project-list">
 
