--- a/index.html
+++ b/index.html
@@ -164,13 +164,12 @@
       <!--
         - #NAVBAR
       -->
-
       <nav class="navbar">
 
         <ul class="navbar-list">
 
           <li class="navbar-item">
-            <button class="navbar-link" data-nav-link>About</button>
+            <button class="navbar-link  active" data-nav-link>About</button>
           </li>
 
           <li class="navbar-item">
@@ -181,9 +180,18 @@
             <button class="navbar-link" data-nav-link>Portfolio</button>
           </li>
 
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Blog</button>
+          </li>
+
+          <li class="navbar-item">
+            <button class="navbar-link" data-nav-link>Contact</button>
+          </li>
+
         </ul>
 
       </nav>
+
 
 
 
