--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
 
           </ul>
           
-<!--            <div class="filter-select-box">
+            <div class="filter-select-box">
 
             <button class="filter-select" data-select>
 
@@ -517,9 +517,9 @@
                 <ion-icon name="chevron-down"></ion-icon>
               </div>
 
-            </button> -->
+            </button> 
 
-<!--             <ul class="select-list">
+             <ul class="select-list">
 
               <li class="select-item">
                 <button data-select-item>All</button>
@@ -535,7 +535,7 @@
 
             </ul> 
 
-          </div> -->
+          </div> 
           
           <ul class="project-list">
 
