--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                 <h4 class="h4 service-item-title">Robot kinematics</h4>
 
                 <p class="service-item-text">
-                  Provide a theory for robot behavior through D-H transformations as well as transformation matrices..
+                  Provide a theory for robot behavior through D-H transformations as well as transformation matrices.
                 </p>
               </div>
 
@@ -390,8 +390,8 @@
               <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                Electrical Engineering and Automation<br>
-                Major Courses: C, C++, Java, Operating Systems, Data Structure, Principles of Electrical Engineering, Electronic Technology
+                Major: Electrical Engineering and Automation<br>
+                Main Courses: C, C++, Java, Operating Systems, Data Structure, Principles of Electrical Engineering, Electronic Technology
                 
               </p>
 
@@ -404,8 +404,8 @@
               <span>2022 — 2023</span>
 
               <p class="timeline-text">
-                Information Technology<br>
-                Major Courses: Robotics Automation, Human-Machine Interface, Softawre Engineering, Principles of Compilation
+                Major: Information Technology<br>
+                Main Courses: Robotics Automation, Human-Machine Interface, Softawre Engineering, Principles of Compilers, Information Systems, Network Security
               </p>
 
             </li>
@@ -417,8 +417,8 @@
               <span>2023 — 2024</span>
 
               <p class="timeline-text">
-                Robotics<br>
-                Major Courses: Robotic Systems, Sofware for Robotics, Foundations of Machine Learning
+                Major: Robotics<br>
+                Main Courses: Robotic Systems, Sofware for Robotics, Foundations of Machine Learning, Robotic Manipulators, Autonomous Mobile Robots, Robotic Systems Design Project
               </p>
 
             </li>
