--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="contact-info">
               <p class="contact-title">Location</p>
 
-              <address>Manchester, UK</address>
+              <address>Hubei, China</address>
             </div>
 
           </li>
@@ -201,12 +201,12 @@
 
         <section class="about-text">
           <p>
-            I'm a graduate student at the University of Manchester studying robotics.
-            I enjoy implementing robot bionics through code and algorithms.
+            I am a Robotics MSc graduate (with Merit) from The University of Manchester and holder of dual BEng degrees in Electrical Engineering and Information Technology. I have strong expertise in Python, ROS2, and robotics simulation tools such as Gazebo, and have led projects including the Leo Rover and FR3 robotic arm control systems.
           </p>
 
           <p>
             You will be able to find a lot of information about me on this website.
+            My academic journey also includes coursework in human-machine interaction, equipping me with skills to design intuitive robotic systems.
             I am interested in intelligent robotics, 
             and I especially enjoy discussing ethical issues related to robotics, 
             such as human-robot coexistence and gender issues in robotics.
@@ -426,12 +426,12 @@
 
             <li class="timeline-item">
 
-              <h4 class="h4 timeline-item-title">China University of Science and Technology</h4>
+              <h4 class="h4 timeline-item-title">East China University of Science and Technology</h4>
 
               <span>2019 — 2023</span>
 
               <p class="timeline-text">
-                Major: Electrical Engineering and Automation<br>
+                Bachelor: Electrical Engineering and Automation<br>
                 Main Courses: C, C++, Java, Operating Systems, Data Structure, Principles of Electrical Engineering, Electronic Technology
                 
               </p>
@@ -445,7 +445,7 @@
               <span>2022 — 2023</span>
 
               <p class="timeline-text">
-                Major: Information Technology<br>
+                Bachelor: Information Technology<br>
                 Main Courses: Robotics Automation, Human-Machine Interface, Softawre Engineering, Principles of Compilers, Information Systems, Network Security
               </p>
 
@@ -458,7 +458,7 @@
               <span>2023 — 2024</span>
 
               <p class="timeline-text">
-                Major: Robotics<br>
+                Master: Robotics<br>
                 Main Courses: Robotic Systems, Sofware for Robotics, Foundations of Machine Learning, Robotic Manipulators, Autonomous Mobile Robots, Robotic Systems Design Project
               </p>
 
