--- a/index.html
+++ b/index.html
@@ -600,7 +600,7 @@
                   <img src="./assets/images/UAV.gif" alt="finance" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">A* Algorithms</h3>
+                <h3 class="project-title">UAV Simulator with PID Control</h3>
                 <p class="project-category">UoM</p>
               </a>
             </li>
